--- a/faq.html
+++ b/faq.html
@@ -7,9 +7,11 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
- <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>About Us</title>
+    <title>Menu</title>
 </head>
 <body style="background-color: #1B1F2F;">
     <nav>
@@ -34,18 +36,11 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
-        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
-            <h2>Our Story</h2>
+        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;">
+            <h1>FAQ</h1>
         </div>
     </section>
-    <div class = "about">
-        <p>
-            Welcome to Nha Trang One! I'm Andy Ha, proud to carry on my parents' legacy. Since 1992, our family has poured our hearts into creating an inviting space where you can experience the warmth of a home-cooked meal.
-            Over the years, we've faced challenges head-on, preserving the essence of our authentic Vietnamese cuisine. Our commitment to honoring our family traditions and providing affordable, flavorful dishes has never wavered.
-            At Nha Trang One, we believe that good food has the power to bring people together. We strive to offer a taste of Vietnam that won't break the bank, creating an inclusive dining experience for all to enjoy.
-            Join our extended family and savor the culinary delights we've crafted with love and passion. Feel the sense of comfort that comes from being part of our welcoming community. As we adapt to better serve you, we remain dedicated to upholding our founding principles.
-            Thank you for being part of our journey. We look forward to sharing the delicious tastes and warm hospitality of Nha Trang One with you.
-        </p>
-        <img src = "nhatrangImg/coldandypicture.png" alt = "Owner: Andy Ha">
+    <div class = "faq">
+        hello
     </div>
-</body> 
+</body>
