--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="ourstory.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a id = 'location' href="#Location">Location</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
         <script src = "/js/navbar.js"></script>
