--- a/menu.html
+++ b/menu.html
@@ -30,14 +30,14 @@
             <li><a href="ourstory.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Menu_Landing_Page">
-        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
-            <h1>Menu</h1>
+        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;">
+            <h2>Menu</h2>
         </div>
     </section>
     <a class = "top-button">
