--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Menu</title>
+    <title>FAQ</title>
 </head>
 <body style="background-color: #1B1F2F;">
     <nav>
@@ -31,16 +31,116 @@
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
+            <li><a target="_blank" href="https://food.google.com/chooseprovider?restaurantId=/g/1x5qtptq&g2lbs=ADZRdktx84tqCqsdoSX3TckSHPKsx5cZctaLnqjCyJ1CB2SRrbct25yM90bJC1jOSHynm1ktqH5x_r5zBqm3tub_cqR_t6RiEbjhNE5_YcFr47tjMddqLJM%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMUOzJVpjPL1YMfZ3bInYwBDuMfaXTPp5KXh-&gei=9x6KZND0Eb-sptQP6MeF4AE&ei=9x6KZND0Eb-sptQP6MeF4AE&fo_s=OA&sei=CSfBCmfmUxutEU8djF2F__E6&utm_campaign" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
         <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;">
-            <h1>FAQ</h1>
+            <h2>FAQ</h2>
         </div>
     </section>
     <div class = "faq">
-        hello
+        <h1>FAQ</h1>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Do you have vegetable broth?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                No, we do not. Except the hot and sour vegetable soup, we can make it for vegetarian for you!
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Do you take reservations?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                We take reservations only for groups of five and up, exclusions may apply. Call us at blank.
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Do you do delivery/takeout?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                We do delivery using third-party apps including Grubhub, Doordash, and Ubereats. We only take pickup orders off the phone!
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                What are your vegetarian options?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                We have vegetable pho (chicken broth), fried tofu summer rolls, fried tofu vermicelli, stir fry vegetables over rice, hot and sour vegetable soup, and several vegetable entrees.
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Do you have outdoor seating?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                Yes, we do!
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                What are your payment options?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                We take credit cards, debit cards, Apple Pay, and cash!
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                What are your opening hours?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                We are open everyday except Monday from 11:00 am to 8:30pm! 
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Do you have alcohol?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                Yes, we do! We have bottled beers, wine, sake, soju, and hard selzters.
+            </div>
+        </div>
+        <div class = "faq-item">
+            <div class = "faq-dropdown">
+                <div clas  = "question">
+                Can I bring my own bottle of wine?
+                </div>
+                <div class = "carrot"></div>
+            </div>
+            <div class = "answer">
+                Yes, you may, but we charge a 10 dollar cork fee!
+            </div>
+        </div>
     </div>
+    <script  src = "/js/faq.js"></script>
 </body>
