--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="menu.html">Menu</a></li>
             <li><a id = 'location' href="#Location">Location</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
+            <li><a target="_blank" href="https://food.google.com/chooseprovider?restaurantId=/g/1x5qtptq&g2lbs=ADZRdktx84tqCqsdoSX3TckSHPKsx5cZctaLnqjCyJ1CB2SRrbct25yM90bJC1jOSHynm1ktqH5x_r5zBqm3tub_cqR_t6RiEbjhNE5_YcFr47tjMddqLJM%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMUOzJVpjPL1YMfZ3bInYwBDuMfaXTPp5KXh-&gei=9x6KZND0Eb-sptQP6MeF4AE&ei=9x6KZND0Eb-sptQP6MeF4AE&fo_s=OA&sei=CSfBCmfmUxutEU8djF2F__E6&utm_campaign" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
@@ -42,7 +42,7 @@
         <div class="Landing_Page_Content" style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;">
             <img class="main_logo" src="nhatrangImg/NhaTrangOneLogo.svg" alt="NhaTrangOneLogo">
             <h1>Vietnamese Food From Our <br>Family To Yours</h1>
-            <button>Order Now</button>
+            <a target="_blank" href="https://food.google.com/chooseprovider?restaurantId=/g/1x5qtptq&g2lbs=ADZRdktx84tqCqsdoSX3TckSHPKsx5cZctaLnqjCyJ1CB2SRrbct25yM90bJC1jOSHynm1ktqH5x_r5zBqm3tub_cqR_t6RiEbjhNE5_YcFr47tjMddqLJM%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMUOzJVpjPL1YMfZ3bInYwBDuMfaXTPp5KXh-&gei=9x6KZND0Eb-sptQP6MeF4AE&ei=9x6KZND0Eb-sptQP6MeF4AE&fo_s=OA&sei=CSfBCmfmUxutEU8djF2F__E6&utm_campaign" id="order"><button class="Order_Button">ORDER NOW</button></a>
         </div>
     </section>
 
@@ -152,7 +152,7 @@
             
         </div>
         <div>
-            <div id="map">
+            <div id="map" class = "map">
                 <a href="https://www.google.com/maps?saddr=My+Location&daddr=Nha+Trang+One,+87+Baxter+St,+New+York,+NY+10013"></a>
             </div>
             <br><svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
