--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
+            <li><a target="_blank" href="https://food.google.com/chooseprovider?restaurantId=/g/1x5qtptq&g2lbs=ADZRdktx84tqCqsdoSX3TckSHPKsx5cZctaLnqjCyJ1CB2SRrbct25yM90bJC1jOSHynm1ktqH5x_r5zBqm3tub_cqR_t6RiEbjhNE5_YcFr47tjMddqLJM%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMUOzJVpjPL1YMfZ3bInYwBDuMfaXTPp5KXh-&gei=9x6KZND0Eb-sptQP6MeF4AE&ei=9x6KZND0Eb-sptQP6MeF4AE&fo_s=OA&sei=CSfBCmfmUxutEU8djF2F__E6&utm_campaign" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
@@ -40,7 +40,7 @@
             <h2>Menu</h2>
         </div>
     </section>
-    <a class = "top-button">
+    <a class = "top-button hide">
         <svg width="75" height="75" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="25" cy="25" r="25" fill="#EEF3FC"/>
             <path d="M13.7713 26.4023C14.1026 26.7335 14.552 26.9196 15.0205 26.9196C15.489 26.9196 15.9384 26.7335 16.2698 26.4023L25.0163 17.6557L33.7629 26.4023C34.0961 26.7242 34.5425 26.9023 35.0058 26.8982C35.4691 26.8942 35.9122 26.7084 36.2398 26.3808C36.5675 26.0531 36.7533 25.61 36.7573 25.1467C36.7613 24.6834 36.5832 24.237 36.2614 23.9038L26.2656 13.908C25.9342 13.5767 25.4849 13.3906 25.0163 13.3906C24.5478 13.3906 24.0984 13.5767 23.7671 13.908L13.7713 23.9038C13.44 24.2351 13.2539 24.6845 13.2539 25.153C13.2539 25.6216 13.44 26.0709 13.7713 26.4023Z" fill="#1B1F2F"/>
