--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Do you take reservations?
                 </div>
                 <div class = "carrot"></div>
@@ -66,7 +66,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Do you do delivery/takeout?
                 </div>
                 <div class = "carrot"></div>
@@ -77,7 +77,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 What are your vegetarian options?
                 </div>
                 <div class = "carrot"></div>
@@ -88,7 +88,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Do you have outdoor seating?
                 </div>
                 <div class = "carrot"></div>
@@ -99,7 +99,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 What are your payment options?
                 </div>
                 <div class = "carrot"></div>
@@ -110,7 +110,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 What are your opening hours?
                 </div>
                 <div class = "carrot"></div>
@@ -121,7 +121,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Do you have alcohol?
                 </div>
                 <div class = "carrot"></div>
@@ -132,7 +132,7 @@
         </div>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Can I bring my own bottle of wine?
                 </div>
                 <div class = "carrot"></div>
