--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css' rel='stylesheet' />
     <title>Nha Trang One</title>
 </head>
-<body>
+<body class="main-parallax flex">
     <nav>
         <div class = 'drop'>
             <div class="logo">
@@ -39,7 +39,7 @@
     </nav>
     
     <section class="Landing_Page">
-        <div class="Landing_Page_Content" style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;">
+        <div class="Landing_Page_Content">
             <img class="main_logo" src="nhatrangImg/NhaTrangOneLogo.svg" alt="NhaTrangOneLogo">
             <h1>Vietnamese Food From Our <br>Family To Yours</h1>
             <a target="_blank" href="https://food.google.com/chooseprovider?restaurantId=/g/1x5qtptq&g2lbs=ADZRdktx84tqCqsdoSX3TckSHPKsx5cZctaLnqjCyJ1CB2SRrbct25yM90bJC1jOSHynm1ktqH5x_r5zBqm3tub_cqR_t6RiEbjhNE5_YcFr47tjMddqLJM%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMUOzJVpjPL1YMfZ3bInYwBDuMfaXTPp5KXh-&gei=9x6KZND0Eb-sptQP6MeF4AE&ei=9x6KZND0Eb-sptQP6MeF4AE&fo_s=OA&sei=CSfBCmfmUxutEU8djF2F__E6&utm_campaign" id="order"><button class="Order_Button">ORDER NOW</button></a>
