--- a/ourstory.html
+++ b/ourstory.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>About Us</title>
 </head>
-<body style="background-color: #1B1F2F;">
+<body class = 'about-parallax'>
     <nav>
         <div class = 'drop'>
             <div class="logo">
@@ -34,7 +34,7 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
-        <div class="about Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
+        <div class="Landing_Page_Content">
             <h2>Our Story</h2>
         </div>
     </section>
