added menu carasoul, temp buffer / footer
how to design faq, how to fix buffers, add buttons to the carasoul

--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>FAQ</title>
 </head>
-<body style="background-color: #1B1F2F;">
+<body class = "faq-parallax">
     <nav>
         <div class = 'drop'>
             <div class="logo">
@@ -36,12 +36,12 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
-        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;">
+        <div class="Landing_Page_Content">
             <h2>FAQ</h2>
         </div>
     </section>
+    <div class = "buffer">FAQ</div>
     <div class = "faq">
-        <h1>FAQ</h1>
         <div class = "faq-item">
             <div class = "faq-dropdown">
                 <div clas  = "question">
