--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         </div>
     </section>
 
+    <div class = "buffer">POPULAR DISHES & DRINKS</div>
+
     <section class="Popular_Dishes">
         <div class="Popular_Dishes_Content">
             <h1>POPULAR DISHES & DRINKS</h1>
@@ -108,6 +110,8 @@
         </div>
     </section>
 
+    <div class = "buffer">Instagram</div>
+
     <section class="Instagram">
         <!-- fix formatting with the p elements -->
         <div class="Instagram_Handle">
@@ -127,9 +131,10 @@
         <div class="Instagram_Handle" style = "justify-content: right; margin-top: 15px;">
             <a href="https://www.instagram.com/nhatrangnyc/?hl=en"><p>Follow Us On Instagram!</p></a>
         </div>
-        
     </section>
-    
+
+    <div class = "buffer">Location</div>
+
     <section class="Location" id = "Location">
         <div class="description">
             <h1>HOURS & LOCATION</h1>
@@ -175,12 +180,20 @@
         </script>
     </section>
     <footer>
-        <div>
-            footer goes here
+        <div class = "footer-section">
+            <h3>Contact Information</h3>
+            <p>87 Baxter Street </p> 
+            <p>New York, NY 10013</p>
+            <p>(212)-233-5948</p>
         </div>
-            <ul>
-                <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
-            </ul>
+        <div class = "footer-section">
+            <h3>Opening Hours</h3>
+            <p>Tuesday - Sunday: 11am - 8:30pm</p>
+        </div>
+        <div class = "footer-section">
+            <h3>Social Media</h3>
+            <p>Instagram</p>
+        </div>
     </footer>
 </body>
 </html>
