--- a/menu.html
+++ b/menu.html
@@ -35,11 +35,7 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <section class="Menu_Landing_Page">
-        <div class="Landing_Page_Content">
-            <h2>Menu</h2>
-        </div>
-    </section>
+    
     <a class = "top-button hide">
         <svg width="75" height="75" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="25" cy="25" r="25" fill="#EEF3FC"/>
@@ -47,8 +43,15 @@
             <path d="M13.7713 36.0942C14.1026 36.4254 14.552 36.6115 15.0205 36.6115C15.489 36.6115 15.9384 36.4254 16.2698 36.0942L25.0163 27.3476L33.7629 36.0942C34.0961 36.416 34.5425 36.5941 35.0058 36.5901C35.4691 36.5861 35.9122 36.4003 36.2398 36.0727C36.5675 35.745 36.7533 35.3019 36.7573 34.8386C36.7613 34.3753 36.5832 33.9289 36.2614 33.5957L26.2656 23.5999C25.9342 23.2686 25.4849 23.0825 25.0163 23.0825C24.5478 23.0825 24.0984 23.2686 23.7671 23.5999L13.7713 33.5957C13.44 33.927 13.2539 34.3764 13.2539 34.8449C13.2539 35.3135 13.44 35.7628 13.7713 36.0942Z" fill="#1B1F2F"/>
         </svg>            
     </a>
-    <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
-    <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
+    <section class = "home">
+        <h2>MENU</h2>
+        <img class = "img-slide active" src = "nhatrangImg/PTDB.JPG">
+        <img class = "img-slide" src = "nhatrangImg/CANHCHAY.JPG">
+        <img class = "img-slide" src = "nhatrangImg/BLL.JPG">
+        <img class = "img-slide" src = "nhatrangImg/BC2.jpg">
+        <img class = "img-slide" src = "nhatrangImg/tomrammoi.JPG">
+        <img class = "img-slide" src = "nhatrangImg/XNG.jpg">
+    </section>
     <div class = "menu-nav">
         <div class = "menu-buttons">
             <a class = "eat" id = "appetizer"><li>Appetizers</li></a>
