--- a/faq.html
+++ b/faq.html
@@ -42,6 +42,7 @@
     </section>
     <div class = "buffer">FAQ</div>
     <div class = "faq">
+        <h1>FAQ</h1>
         <div class = "faq-item">
             <div class = "faq-dropdown">
                 <div clas  = "question">
