--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Menu</title>
 </head>
-<body class = "about-parallax">
+<body class = "menu-parallax">
     <nav>
         <div class = 'drop'>
             <div class="logo">
