--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
         </div>
     </section>
 
-    <div class = "buffer">POPULAR DISHES & DRINKS</div>
+    <div class = "buffer about-parallax">
+        <h1>POPULAR DISHES & DRINKS</h1>
+    </div>
 
     <section class="Popular_Dishes">
         <div class="Popular_Dishes_Content">
-            <h1>POPULAR DISHES & DRINKS</h1>
             <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
                 <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
@@ -90,7 +91,7 @@
                         <h2>Sườn Heo Nướng</h2>
                         <p>Vietnamese Style Barbecue Pork Chops</p>
                     </div>
-                    <img src="nhatrangImg/suon-heo-nuong.png" alt="suon-heo-nuong">
+                    <img src="nhatrangImg/XNG.jpg" alt="suon-heo-nuong">
                 </div>
                 <div class="dish">
                     <div class="description">
@@ -110,7 +111,9 @@
         </div>
     </section>
 
-    <div class = "buffer">Instagram</div>
+    <div class = "buffer insta-parallax">
+        <h1>Instagram</h1>
+    </div>
 
     <section class="Instagram">
         <!-- fix formatting with the p elements -->
@@ -133,11 +136,12 @@
         </div>
     </section>
 
-    <div class = "buffer">Location</div>
+    <div class = "buffer menu-parallax">
+        <h1>HOURS & LOCATION</h1>
+    </div>
 
     <section class="Location" id = "Location">
         <div class="description">
-            <h1>HOURS & LOCATION</h1>
 
             <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
