--- a/menu.html
+++ b/menu.html
@@ -45,12 +45,15 @@
     </a>
     <section class = "home">
         <h2>MENU</h2>
-        <img class = "img-slide active" src = "nhatrangImg/PTDB.JPG">
-        <img class = "img-slide" src = "nhatrangImg/CANHCHAY.JPG">
-        <img class = "img-slide" src = "nhatrangImg/BLL.JPG">
-        <img class = "img-slide" src = "nhatrangImg/BC2.jpg">
-        <img class = "img-slide" src = "nhatrangImg/tomrammoi.JPG">
-        <img class = "img-slide" src = "nhatrangImg/XNG.jpg">
+        <img class = "img-slide active" src = "nhatrangImg/PTDB.JPG" alt = "PHO DAC BIET">
+        <img class = "img-slide" src = "nhatrangImg/CANHCHAY.JPG" alt = "CANH CHUA CHAY">
+        <img class = "img-slide" src = "nhatrangImg/BLL.JPG" alt = "BO LUC LAC">
+        <img class = "img-slide" src = "nhatrangImg/BC2.jpg" alt = "BUN COMBO 2">
+        <img class = "img-slide" src = "nhatrangImg/tomrammoi.JPG" alt = "TOM RAM MOUI">
+        <img class = "img-slide" src = "nhatrangImg/XNG.jpg" alt = "SUON NUONG">
+        <div class = "carousel-nav">
+                <div class = 'carousel-indicator'></div>
+        </div>
     </section>
     <div class = "menu-nav">
         <div class = "menu-buttons">
